--- a/build-sensor_hub-Qt_6_6_1_for_macOS-Debug/Makefile
+++ b/build-sensor_hub-Qt_6_6_1_for_macOS-Debug/Makefile
@@ -58,8 +58,7 @@ SOURCES       = ../sensor_hub/dust_sensor.cpp \
 		../sensor_hub/main.cpp \
 		../sensor_hub/mainwindow.cpp \
 		../sensor_hub/sensor.cpp \
-		../sensor_hub/temperature_sensor.cpp moc_mainwindow.cpp \
-		moc_sensor.cpp
+		../sensor_hub/temperature_sensor.cpp moc_mainwindow.cpp
 OBJECTS       = dust_sensor.o \
 		humidity_sensor.o \
 		load_sensors.o \
@@ -67,8 +66,7 @@ OBJECTS       = dust_sensor.o \
 		mainwindow.o \
 		sensor.o \
 		temperature_sensor.o \
-		moc_mainwindow.o \
-		moc_sensor.o
+		moc_mainwindow.o
 DIST          = ../../../Qt/6.6.1/macos/mkspecs/features/spec_pre.prf \
 		../../../Qt/6.6.1/macos/mkspecs/features/device_config.prf \
 		../../../Qt/6.6.1/macos/mkspecs/common/unix.conf \
@@ -661,26 +659,24 @@ benchmark: first
 
 compiler_rcc_make_all:
 compiler_rcc_clean:
-compiler_moc_header_make_all: moc_mainwindow.cpp moc_sensor.cpp
+compiler_moc_header_make_all: moc_mainwindow.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp moc_sensor.cpp
+	-$(DEL_FILE) moc_mainwindow.cpp
 moc_mainwindow.cpp: ../sensor_hub/mainwindow.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QWidget \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qwidget.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLineEdit \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlineedit.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLabel \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlabel.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QPushButton \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qpushbutton.h \
 		../../../Qt/6.6.1/macos/libexec/moc
 	/Users/albertocanavese/Qt/6.6.1/macos/libexec/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -D__cplusplus=199711L -D__APPLE_CC__=6000 -D__clang__ -D__clang_major__=14 -D__clang_minor__=0 -D__clang_patchlevel__=3 -D__GNUC__=4 -D__GNUC_MINOR__=2 -D__GNUC_PATCHLEVEL__=1 -I/Users/albertocanavese/Qt/6.6.1/macos/mkspecs/macx-clang -I/Users/albertocanavese/Desktop/progetto_P2/sensor_hub -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtWidgets.framework/Headers -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtGui.framework/Headers -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtCore.framework/Headers -I. -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1 -I/Library/Developer/CommandLineTools/usr/lib/clang/14.0.3/include -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include -I/Library/Developer/CommandLineTools/usr/include -F/Users/albertocanavese/Qt/6.6.1/macos/lib ../sensor_hub/mainwindow.h -o moc_mainwindow.cpp
-
-moc_sensor.cpp: ../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
-		../../../Qt/6.6.1/macos/libexec/moc
-	/Users/albertocanavese/Qt/6.6.1/macos/libexec/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -D__cplusplus=199711L -D__APPLE_CC__=6000 -D__clang__ -D__clang_major__=14 -D__clang_minor__=0 -D__clang_patchlevel__=3 -D__GNUC__=4 -D__GNUC_MINOR__=2 -D__GNUC_PATCHLEVEL__=1 -I/Users/albertocanavese/Qt/6.6.1/macos/mkspecs/macx-clang -I/Users/albertocanavese/Desktop/progetto_P2/sensor_hub -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtWidgets.framework/Headers -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtGui.framework/Headers -I/Users/albertocanavese/Qt/6.6.1/macos/lib/QtCore.framework/Headers -I. -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1 -I/Library/Developer/CommandLineTools/usr/lib/clang/14.0.3/include -I/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include -I/Library/Developer/CommandLineTools/usr/include -F/Users/albertocanavese/Qt/6.6.1/macos/lib ../sensor_hub/sensor.h -o moc_sensor.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -707,8 +703,6 @@ compiler_clean: compiler_moc_header_clean compiler_uic_clean
 
 dust_sensor.o: ../sensor_hub/dust_sensor.cpp ../sensor_hub/dust_sensor.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QFile \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qfile.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QTextStream \
@@ -719,8 +713,6 @@ dust_sensor.o: ../sensor_hub/dust_sensor.cpp ../sensor_hub/dust_sensor.h \
 
 humidity_sensor.o: ../sensor_hub/humidity_sensor.cpp ../sensor_hub/humidity_sensor.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QFile \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qfile.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QTextStream \
@@ -731,8 +723,6 @@ humidity_sensor.o: ../sensor_hub/humidity_sensor.cpp ../sensor_hub/humidity_sens
 
 load_sensors.o: ../sensor_hub/load_sensors.cpp ../sensor_hub/load_sensors.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
 		../sensor_hub/dust_sensor.h \
 		../sensor_hub/temperature_sensor.h \
 		../sensor_hub/humidity_sensor.h \
@@ -747,15 +737,17 @@ load_sensors.o: ../sensor_hub/load_sensors.cpp ../sensor_hub/load_sensors.h \
 main.o: ../sensor_hub/main.cpp ../sensor_hub/mainwindow.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QWidget \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qwidget.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLineEdit \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlineedit.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLabel \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlabel.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QPushButton \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qpushbutton.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
 		../sensor_hub/temperature_sensor.h \
 		../sensor_hub/dust_sensor.h \
 		../sensor_hub/humidity_sensor.h \
@@ -768,27 +760,37 @@ main.o: ../sensor_hub/main.cpp ../sensor_hub/mainwindow.h \
 mainwindow.o: ../sensor_hub/mainwindow.cpp ../sensor_hub/mainwindow.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QWidget \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qwidget.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
-		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLineEdit \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlineedit.h \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QLabel \
 		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlabel.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QListWidget \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qlistwidget.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QHBoxLayout \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qboxlayout.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QPushButton \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qpushbutton.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
-		../sensor_hub/load_sensors.h
+		../sensor_hub/load_sensors.h \
+		../sensor_hub/dust_sensor.h \
+		../sensor_hub/temperature_sensor.h \
+		../sensor_hub/humidity_sensor.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QVBoxLayout \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QFileDialog \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qfiledialog.h \
+		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QFile \
+		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qfile.h \
+		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QTextStream \
+		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qtextstream.h \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/QMessageBox \
+		../../../Qt/6.6.1/macos/lib/QtWidgets.framework/Headers/qmessagebox.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../sensor_hub/mainwindow.cpp
 
-sensor.o: ../sensor_hub/sensor.cpp ../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h
+sensor.o: ../sensor_hub/sensor.cpp ../sensor_hub/sensor.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o sensor.o ../sensor_hub/sensor.cpp
 
 temperature_sensor.o: ../sensor_hub/temperature_sensor.cpp ../sensor_hub/temperature_sensor.h \
 		../sensor_hub/sensor.h \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QObject \
-		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qobject.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QFile \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/qfile.h \
 		../../../Qt/6.6.1/macos/lib/QtCore.framework/Headers/QTextStream \
@@ -801,9 +803,6 @@ temperature_sensor.o: ../sensor_hub/temperature_sensor.cpp ../sensor_hub/tempera
 
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
-
-moc_sensor.o: moc_sensor.cpp 
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_sensor.o moc_sensor.cpp
 
 ####### Install
 
